--- a/TriviaQuiz/src/main/res/layout/splash_layout.xml
+++ b/TriviaQuiz/src/main/res/layout/splash_layout.xml
@@ -6,6 +6,72 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".QuizActivity">
+    tools:context=".QuizActivity"
+    android:padding="0dp">
 
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:background="@android:color/black">
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/splash_title1"
+            android:textColor="@color/splash_color_title"
+            android:textSize="@dimen/splash_title"
+            android:gravity="center|center_vertical"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp" />
+
+        <TableLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:stretchColumns="*">
+
+            <TableRow>
+
+                <ImageView android:src="@drawable/splash_1r1c"
+                    android:layout_height="150dp"
+                    android:layout_width="150dp" />
+
+                <ImageView android:src="@drawable/splash_1r2c"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp" />
+            </TableRow>
+
+            <TableRow>
+
+                <ImageView android:src="@drawable/splash_2r1c"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp" />
+
+                <ImageView android:src="@drawable/splash_2r2c"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp" />
+            </TableRow>
+        </TableLayout>
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/splash_title2"
+            android:textColor="@color/splash_color_title"
+            android:textSize="@dimen/splash_title"
+            android:gravity="center|center_vertical"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp" />
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:text="@string/splash_version"
+            android:textColor="@color/splash_color_version"
+            android:textSize="@dimen/splash_version"
+            android:background="@color/splash_color_background"
+            android:lineSpacingExtra="@dimen/splash_space"
+            android:gravity="center|center_vertical" />
+
+    </LinearLayout>
 </RelativeLayout>
