--- a/TriviaQuiz/src/main/res/values/dimens.xml
+++ b/TriviaQuiz/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="splash_title">24dp</dimen>
+    <dimen name="splash_version">5dp</dimen>
+    <dimen name="splash_space">3dp</dimen>
 </resources>
